view category update

--- a/app/src/main/res/layout/activity_category_name.xml
+++ b/app/src/main/res/layout/activity_category_name.xml
@@ -97,12 +97,12 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:id="@+id/llactivitycontainer"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical" />
         </ScrollView>
 
@@ -127,7 +127,7 @@
 
 
         <Button
-            android:id="@+id/btnClick"
+            android:id="@+id/btnAddActvity"
             android:layout_width="165dp"
             android:layout_height="50dp"
             android:layout_marginLeft="25dp"
@@ -139,7 +139,7 @@
 
 
         <Button
-            android:id="@+id/btnClick2"
+            android:id="@+id/btnEditCategory"
             android:layout_width="165dp"
             android:layout_height="50dp"
             android:layout_marginLeft="22dp"
