--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,7 +10,7 @@
     <View
         android:id="@+id/vwLogsBar"
         android:layout_width="4dp"
-        android:layout_height="100dp"
+        android:layout_height="82dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/rounded_rectangle"
@@ -41,7 +41,6 @@
             android:text="Welcome"
             android:textColor="@color/Dark_Green"
             android:textSize="30dp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -64,91 +63,91 @@
     <View
         android:id="@+id/vwEntryBackground"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="640dp"
+        android:layout_marginTop="-8dp"
         android:layout_below="@id/llCreateEditActivity"
-        android:layout_marginTop="20dp"
         android:background="@drawable/backing_shape"
         android:backgroundTint="@color/Dark_Green" />
 
     <LinearLayout
-        android:id="@+id/llActivityPage"
+        android:id="@+id/llSectionSelectorBar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="50dp"
         android:layout_below="@id/llCreateEditActivity"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="14dp"
         android:layout_marginRight="20dp"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:background="@drawable/rounded_rectangle"
+        android:backgroundTint="@color/Muted_Green">
 
-        <View
-            android:id="@+id/vwActivityBar"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tvCycleViewLeft"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_below="@id/llActivityPage"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/rounded_rectangle"
-            android:backgroundTint="@color/Muted_Green" />
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:id="@+id/activitycontainer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
-        </ScrollView>
+            android:layout_marginTop="-14dp"
+            android:layout_weight="1"
+            android:text="￩"
+            android:textAlignment="center"
+            android:textSize="50dp"
+            android:clickable="true"
+            android:onClick="onClick"
+            />
 
 
-        <Button
-            android:id="@+id/btnClick"
-            android:layout_width="220dp"
+
+        <TextView
+            android:id="@+id/tvSectionTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Activities"
+            android:textSize="30dp"
+            android:layout_marginTop="-22dp"
+            android:textAlignment="center"
+            android:layout_weight="1"
+            android:textColor="@color/Input_Grey"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvCycleViewRight"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="350dp"
-            android:background="@drawable/rounded_item_box"
-            android:text=""
-            android:theme="@style/button_colour_white"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+            android:layout_weight="1"
+            android:text="￫"
+            android:layout_marginTop="-14dp"
+            android:textAlignment="center"
+            android:textSize="50dp"
+            android:clickable="true"
+            android:onClick="onClick"
+
+
+            />
 
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/txtActivityBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="138dp"
-        android:layout_marginTop="167dp"
-        android:text="Activities"
-        android:textSize="30dp"
-        android:textStyle="bold" />
+    <androidx.fragment.app.FragmentContainerView
+        android:layout_width="match_parent"
+        android:layout_height="460dp"
+        android:id="@+id/fcFragmentContainer"
+        android:layout_marginTop="6dp"
+        android:layout_below="@id/llSectionSelectorBar"
+        />
+
+
 
     <ImageView
+        android:layout_marginTop="10dp"
         android:id="@+id/imgTurtle"
-        android:layout_width="70dp"
+        android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="162dp"
-        android:layout_marginTop="658dp"
-        app:srcCompat="@drawable/cyanturtle" />
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/rounded_rectangle"
+        app:srcCompat="@drawable/cyanturtle"
+        android:layout_below="@id/fcFragmentContainer"/>
 
-    <TextView
-        android:id="@+id/TvLeft"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="161dp"
-        android:text="B"
-        android:textSize="40dp" />
 
-    <TextView
-        android:id="@+id/TvRight"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginLeft="340dp"
-        android:layout_marginTop="161dp"
-        android:text="F"
-        android:textSize="40dp" />
+
+
 
 </RelativeLayout>
