--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -190,6 +190,7 @@
             android:textStyle="bold"
             android:theme="@style/button_colour_green"/>
 
+
         <Button
             android:id="@+id/btnClick"
             android:layout_width="150dp"
@@ -231,6 +232,13 @@
         android:layout_marginLeft="290dp"
         android:rotation="40"
         app:srcCompat="@drawable/greenturtle" />
+
+    <androidx.camera.view.PreviewView
+        android:id="@+id/previewView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        />
+
 
 </RelativeLayout>
 
