Added View Binding to CustomActivity

--- a/app/src/main/res/layout/home_activity_view_fragment.xml
+++ b/app/src/main/res/layout/home_activity_view_fragment.xml
@@ -10,10 +10,11 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/svBars">
+            android:id="@+id/svBars"
+            android:layout_centerHorizontal="true">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:id="@+id/llBars" />
