--- a/app/src/main/res/layout/customactivity.xml
+++ b/app/src/main/res/layout/customactivity.xml
@@ -3,15 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <View
         android:id="@+id/viewWhiteBack"
-        android:layout_width="wrap_content"
+        android:layout_width="380dp"
         android:layout_height="80dp"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/rounded_rectangle" />
+        android:layout_marginTop="16dp"
+        android:background="@drawable/rounded_rectangle"
+        />
 
     <View
         android:id="@+id/vBlock"
