--- a/app/src/main/res/layout/customactivity.xml
+++ b/app/src/main/res/layout/customactivity.xml
@@ -2,44 +2,37 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="200dp"
     android:orientation="vertical"
 
     >
 
     <View
-        android:id="@+id/viewWhiteBack"
+        android:id="@+id/vwBarBacking"
         android:layout_width="380dp"
         android:layout_height="80dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/rounded_rectangle"
         />
 
-    <View
-        android:id="@+id/vBlock"
-        android:layout_width="100dp"
-        android:layout_height="70dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="25dp"
-        android:layout_toRightOf="@id/llNameText"
-        android:backgroundTint="@color/Activity_Yellow"
-        android:background="@drawable/rounded_rectangle"/>
-
 
     <LinearLayout
         android:id="@+id/llNameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="30dp"
-        android:orientation="horizontal">
-        `
+        android:layout_marginLeft="9dp"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal"
+        >
+
 
         <LinearLayout
             android:id="@+id/llText"
             android:layout_width="230dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="9dp"
+            android:layout_marginLeft="2dp">
 
             <TextView
                 android:id="@+id/tvPrimaryText"
@@ -56,39 +49,43 @@
         </LinearLayout>
 
         <View
-            android:id="@+id/vBar"
+            android:id="@+id/vwBar"
             android:layout_width="7dp"
             android:layout_height="60dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginTop="10dp"
             android:backgroundTint="@color/Muted_Green"
             android:background="@drawable/rounded_rectangle"/>
 
+        <LinearLayout
+            android:id="@+id/llBlockText"
+            android:layout_width="100dp"
+            android:layout_height="70dp"
+            android:orientation="vertical"
+            android:background="@drawable/rounded_rectangle"
+            android:backgroundTint="@color/Activity_Yellow"
+            android:gravity="center"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="8dp">
+
+            <TextView
+                android:id="@+id/tvBlockText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hours to go!" />
+
+            <TextView
+                android:id="@+id/tvBlockX"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="X"
+                android:textSize="24sp" />
+        </LinearLayout>
+
     </LinearLayout>
 
 
 
-    <LinearLayout
-        android:id="@+id/llBlockText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/llNameText"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
-        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvBlockText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hours to go!" />
-
-        <TextView
-            android:id="@+id/tvBlockX"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:text="X"
-            android:textSize="24sp" />
-    </LinearLayout>
 
 </RelativeLayout>
