--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,7 +12,7 @@
         android:layout_width="4dp"
         android:layout_height="82dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="14dp"
         android:background="@drawable/rounded_rectangle"
         android:backgroundTint="@color/Dark_Green" />
 
@@ -21,16 +21,16 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginLeft="300dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="14dp"
         android:rotation="-45"
         app:srcCompat="@drawable/cogturtle" />
 
     <LinearLayout
         android:id="@+id/llCreateEditActivity"
-        android:layout_width="389dp"
-        android:layout_height="102dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="14dp"
         android:layout_toRightOf="@id/vwLogsBar"
         android:orientation="vertical">
 
@@ -63,8 +63,8 @@
     <View
         android:id="@+id/vwEntryBackground"
         android:layout_width="match_parent"
-        android:layout_height="640dp"
-        android:layout_marginTop="-8dp"
+        android:layout_height="648dp"
+        android:layout_marginTop="14dp"
         android:layout_below="@id/llCreateEditActivity"
         android:background="@drawable/backing_shape"
         android:backgroundTint="@color/Dark_Green" />
@@ -74,61 +74,57 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_below="@id/llCreateEditActivity"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginHorizontal="20dp"
         android:orientation="horizontal"
         android:background="@drawable/rounded_rectangle"
-        android:backgroundTint="@color/Muted_Green">
+        android:backgroundTint="@color/Muted_Green"
+        android:gravity="center">
 
-        <TextView
-            android:id="@+id/tvCycleViewLeft"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_marginTop="-14dp"
-            android:layout_weight="1"
-            android:text="￩"
-            android:textAlignment="center"
-            android:textSize="50dp"
+
+
+
+
+
+        <ImageView
+            android:id="@+id/imgCycleViewLeft"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:srcCompat="@drawable/navigation_arrow"
             android:clickable="true"
             android:onClick="onClick"
+            app:tint="@color/Input_Grey"
             />
-
-
 
         <TextView
             android:id="@+id/tvSectionTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:text="Activities"
             android:textSize="30dp"
-            android:layout_marginTop="-22dp"
             android:textAlignment="center"
-            android:layout_weight="1"
             android:textColor="@color/Input_Grey"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tvCycleViewRight"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:text="￫"
-            android:layout_marginTop="-14dp"
-            android:textAlignment="center"
-            android:textSize="50dp"
+
+        <ImageView
+            android:id="@+id/imgCycleViewRight"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:srcCompat="@drawable/navigation_arrow"
+            app:tint="@color/Input_Grey"
+            android:rotation="180"
             android:clickable="true"
-            android:onClick="onClick"
+            android:onClick="onClick"/>
 
 
-            />
 
 
     </LinearLayout>
 
     <androidx.fragment.app.FragmentContainerView
         android:layout_width="match_parent"
-        android:layout_height="460dp"
+        android:layout_height="496dp"
         android:id="@+id/fcFragmentContainer"
         android:layout_marginTop="6dp"
         android:layout_below="@id/llSectionSelectorBar"
@@ -137,7 +133,7 @@
 
 
     <ImageView
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="12dp"
         android:id="@+id/imgTurtle"
         android:layout_width="300dp"
         android:layout_height="50dp"
