--- a/app/src/main/res/layout/home_activity_view_fragment.xml
+++ b/app/src/main/res/layout/home_activity_view_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="460dp"
+    android:layout_height="496dp"
     android:background="@color/Dark_Green">
 
 
@@ -11,7 +11,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/svBars"
             android:layout_centerHorizontal="true"
             android:requiresFadingEdge="vertical"
