--- a/app/src/main/res/layout/home_category_view_fragment.xml
+++ b/app/src/main/res/layout/home_category_view_fragment.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="460dp"
+    android:layout_height="496dp"
     android:background="@color/Dark_Green">
 
-    <TextView
-        android:id="@+id/tester"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_weight="1"
-        android:text="Category"
-        android:layout_marginTop="-14dp"
-        android:textAlignment="center"
-        android:textSize="50dp"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/svBars"
+        android:layout_centerHorizontal="true"
+        android:requiresFadingEdge="vertical"
+        android:fadingEdgeLength="10dp"
+        >
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/llBars"
+            android:layout_gravity="center_horizontal"
+            >
 
 
+        </LinearLayout>
 
-        />
+
+    </ScrollView>
 
 </RelativeLayout>
