--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -87,27 +87,39 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <LinearLayout
+            <RelativeLayout
+                android:id="@+id/rlBack"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="match_parent">
 
-                <TextView
-                    android:id="@+id/textView3"
+                <View
+                    android:id="@+id/vBack"
                     android:layout_width="180dp"
-                    android:layout_height="35dp"
+                    android:layout_height="55dp"
+                    android:background="@drawable/rounded_rectangle" />
+
+                <View
+                    android:id="@+id/vBackColor"
+                    android:layout_width="60dp"
+                    android:layout_height="45dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
                     android:background="@drawable/rounded_rectangle"
-                    android:text="Back" />
+                    android:backgroundTint="@color/teal_200" />
 
                 <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:layout_marginTop="20dp"
-                    android:background="@drawable/rounded_rectangle"
-                    android:text="View Logs" />
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
 
-            </LinearLayout>
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+
+            </RelativeLayout>
 
             <ImageView
                 android:id="@+id/imageView"
@@ -123,16 +135,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <com.example.opsc_poe.CustomActivity
-                android:id="@+id/MinGoal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"></com.example.opsc_poe.CustomActivity>
-
-            <com.example.opsc_poe.CustomActivity
-                android:id="@+id/MaxGoal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            </com.example.opsc_poe.CustomActivity>
         </LinearLayout>
 
         <TextView
