--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -87,39 +87,95 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <RelativeLayout
-                android:id="@+id/rlBack"
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <View
-                    android:id="@+id/vBack"
-                    android:layout_width="180dp"
-                    android:layout_height="55dp"
-                    android:background="@drawable/rounded_rectangle" />
-
-                <View
-                    android:id="@+id/vBackColor"
-                    android:layout_width="60dp"
-                    android:layout_height="45dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/rounded_rectangle"
-                    android:backgroundTint="@color/teal_200" />
-
-                <TextView
-                    android:id="@+id/textView"
+                <RelativeLayout
+                    android:id="@+id/rlBack"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/textView2"
+                    <View
+                        android:id="@+id/vBack"
+                        android:layout_width="180dp"
+                        android:layout_height="55dp"
+                        android:background="@drawable/rounded_rectangle" />
+
+                    <View
+                        android:id="@+id/vBackColor"
+                        android:layout_width="65dp"
+                        android:layout_height="45dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/rounded_rectangle"
+                        android:backgroundTint="@color/teal_200" />
+
+                    <TextView
+                        android:id="@+id/tvBackText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="80dp"
+                        android:layout_marginTop="13dp"
+                        android:text="Back"
+                        android:textSize="20sp" />
+
+                    <View
+                        android:id="@+id/vBackArrow"
+                        android:layout_width="45dp"
+                        android:layout_height="35dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/navigation_arrow" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/rlViewLogs"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/rlBack"
+                    android:layout_marginTop="15dp">
 
-            </RelativeLayout>
+                    <View
+                        android:id="@+id/vLog"
+                        android:layout_width="180dp"
+                        android:layout_height="55dp"
+                        android:background="@drawable/rounded_rectangle" />
+
+                    <View
+                        android:id="@+id/vLogColor"
+                        android:layout_width="65dp"
+                        android:layout_height="45dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/rounded_rectangle"
+                        android:backgroundTint="@color/teal_200" />
+
+                    <TextView
+                        android:id="@+id/tvLogText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="80dp"
+                        android:layout_marginTop="13dp"
+                        android:text="View Logs"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/tvLogX"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="25dp"
+                        android:layout_marginTop="5dp"
+                        android:text="X"
+                        android:textColor="#000000"
+                        android:textSize="34sp" />
+
+                </RelativeLayout>
+
+            </LinearLayout>
+
 
             <ImageView
                 android:id="@+id/imageView"
@@ -134,6 +190,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
 
         </LinearLayout>
 
@@ -157,52 +214,53 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/btnClick1"
-                android:layout_width="180dp"
-                android:layout_height="50dp"
-                android:background="@drawable/rounded_item_box"
-                android:text="Button"
-                android:layout_marginTop="20dp"
-                android:theme="@style/button_colour_white" />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-            <Button
-                android:id="@+id/btnClick2"
-                android:layout_width="180dp"
-                android:layout_height="50dp"
-                android:background="@drawable/rounded_item_box"
-                android:theme="@style/button_colour_white"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="10dp"
-                android:text="Button" />
+                <View
+                    android:id="@+id/btnAddLog"
+                    android:layout_width="180dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/rounded_item_box" />
+
+                <ImageView
+                    android:id="@+id/imgTurtle1"
+                    android:layout_width="60dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="60dp"
+                    android:layout_marginTop="20dp"
+                    app:srcCompat="@drawable/cyanturtle" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <View
+                    android:id="@+id/btnEditActivity"
+                    android:layout_width="180dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/rounded_item_box" />
+
+                <ImageView
+                    android:id="@+id/imgTurtle2"
+                    android:layout_width="60dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="60dp"
+                    android:layout_marginTop="20dp"
+                    app:srcCompat="@drawable/brownturtle" />
+            </RelativeLayout>
+
         </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-
-        <ImageView
-            android:id="@+id/imgTurtle1"
-            android:layout_width="60dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="588dp"
-            android:layout_marginLeft="80dp"
-            app:srcCompat="@drawable/cyanturtle" />
-
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/imgTurtle2"
-        android:layout_width="60dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="588dp"
-        android:layout_marginLeft="270dp"
-        app:srcCompat="@drawable/brownturtle" />
 </RelativeLayout>
