--- a/app/src/main/res/layout/activity_category_name.xml
+++ b/app/src/main/res/layout/activity_category_name.xml
@@ -93,7 +93,7 @@
             android:layout_height="85dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/rounded_rectangle"
-            android:text="" />
+            android:text="category" />
 
         <ScrollView
             android:layout_width="match_parent"
