--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -83,11 +83,13 @@
 
 
         <LinearLayout
+            android:id="@+id/llactivityViewTop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/llBackandLogButtons"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
@@ -178,7 +180,7 @@
 
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/imgPlaceholder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:srcCompat="@tools:sample/avatars" />
@@ -187,7 +189,7 @@
 
         <LinearLayout
             android:id="@+id/llgoalcontainer"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
