--- a/app/src/main/res/layout/activity_add_log.xml
+++ b/app/src/main/res/layout/activity_add_log.xml
@@ -37,7 +37,7 @@
         android:layout_toRightOf="@id/vwLogsBar">
 
         <TextView
-            android:id="@+id/tvCreate"
+            android:id="@+id/tvAdd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Add"
@@ -49,7 +49,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tvCategory"
+            android:id="@+id/tvLog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Log"
@@ -94,7 +94,7 @@
         <TextView
             android:id="@+id/tvActivityName"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="45dp"
             android:background="@drawable/rounded_rectangle"
             android:text="Activity Name"
             android:textSize="16sp" />
@@ -108,30 +108,13 @@
             android:textColor="#FFFFFF"
             android:textSize="16sp" />
 
-        <EditText
-            android:id="@+id/etStartDate"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@drawable/rounded_rectangle"
-            android:ems="10"
-            android:inputType="date" />
-
-        <TextView
-            android:id="@+id/tvEndDate"
+        <DatePicker
+            android:id="@+id/dpStartDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="End Date"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/etEndDate"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
             android:background="@drawable/rounded_rectangle"
-            android:ems="10"
-            android:inputType="date" />
+            android:calendarViewShown="false"
+            android:datePickerMode="spinner" />
 
         <TextView
             android:id="@+id/tvHours"
@@ -145,7 +128,7 @@
         <EditText
             android:id="@+id/etHours"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="45dp"
             android:background="@drawable/rounded_rectangle"
             android:ems="10"
             android:inputType="number" />
@@ -164,11 +147,11 @@
 
     <ImageView
         android:id="@+id/imgBrown"
-        android:layout_below="@id/llLogInput"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginTop="30dp"
+        android:layout_below="@id/llLogInput"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
         android:rotation="-35"
         app:srcCompat="@drawable/brownturtle" />
 
