--- a/app/src/main/res/layout/activity_logs_category.xml
+++ b/app/src/main/res/layout/activity_logs_category.xml
@@ -97,6 +97,65 @@
             android:inputType="date"
             tools:ignore="SpeakableTextPresentCheck" />
 
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/pieChart"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/pieChart"
+            android:layout_marginTop="40dp"
+            android:orientation="horizontal"
+            android:weightSum="3">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:drawableLeft="@drawable/rounded_item_box"
+                android:drawableTint="@color/purple_200"
+                android:gravity="center"
+                android:padding="4dp"
+                android:text="Android"
+                android:textAlignment="center"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:drawableLeft="@drawable/rounded_item_box"
+                android:drawableTint="@color/Activity_Yellow"
+                android:gravity="center"
+                android:padding="4dp"
+                android:text="Apple"
+                android:textAlignment="center"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:layout_weight="1"
+                android:drawableLeft="@drawable/rounded_item_box"
+                android:drawableTint="@color/teal_200"
+                android:gravity="center"
+                android:padding="4dp"
+                android:text="Microsoft"
+                android:textAlignment="center"
+                android:textColor="@color/black" />
+        </LinearLayout>
+
+
+
+
+
 
     </LinearLayout>
 
@@ -120,39 +179,4 @@
         android:text="B"
         android:textSize="40dp" />
 
-    <TextView
-        android:id="@+id/TvRight"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginLeft="340dp"
-        android:layout_marginTop="93dp"
-        android:text="F"
-        android:textSize="40dp" />
-
-    <ImageView
-        android:id="@+id/imgTurtle"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="610dp"
-        android:layout_marginLeft="30dp"
-        android:rotation="-45"
-        app:srcCompat="@drawable/cyanturtle" />
-
-    <ImageView
-        android:id="@+id/imgTurtle2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="650dp"
-        android:layout_marginLeft="180dp"
-        android:rotation="-45"
-        app:srcCompat="@drawable/brownturtle" />
-
-    <ImageView
-        android:id="@+id/imgTurtle3"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="630dp"
-        android:layout_marginLeft="310dp"
-        android:rotation="-45"
-        app:srcCompat="@drawable/greenturtle" />
 </RelativeLayout>
