--- a/app/src/main/res/layout/activity_add_log.xml
+++ b/app/src/main/res/layout/activity_add_log.xml
@@ -175,6 +175,7 @@
             android:id="@+id/llInputHours"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
             android:orientation="vertical">
 
             <TextView
@@ -188,8 +189,8 @@
                 android:id="@+id/dpHours"
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
-                android:timePickerMode="spinner"
-                android:background="@drawable/rounded_rectangle"/>
+                android:background="@drawable/rounded_rectangle"
+                android:timePickerMode="spinner" />
 
         </LinearLayout>
 
