--- a/app/src/main/res/layout/activity_create_category.xml
+++ b/app/src/main/res/layout/activity_create_category.xml
@@ -66,7 +66,7 @@
     <View
         android:id="@+id/vwEntryBackground"
         android:layout_width="match_parent"
-        android:layout_height="620dp"
+        android:layout_height="640dp"
         android:layout_below="@id/llCreateCategory"
         android:layout_marginTop="10dp"
         android:background="@drawable/backing_shape"
@@ -87,6 +87,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Name"
+            android:textSize="20dp"
             android:textColor="@color/Input_Grey" />
 
         <EditText
@@ -96,8 +97,10 @@
             android:background="@drawable/rounded_rectangle"
             android:backgroundTint="@color/Input_Grey"
             android:ems="10"
+            android:textSize="14dp"
             android:inputType="textPersonName"
-            android:text="Name" />
+            android:text="Name"
+            android:padding="5dp"/>
 
         <TextView
             android:id="@+id/tvColour"
@@ -105,6 +108,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="Colour"
+            android:textSize="20dp"
             android:textColor="@color/Input_Grey" />
 
         <LinearLayout
@@ -140,6 +144,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="Description"
+            android:textSize="20dp"
             android:textColor="@color/Input_Grey" />
 
         <EditText
@@ -150,7 +155,12 @@
             android:backgroundTint="@color/Input_Grey"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Discription" />
+            android:text="Description"
+            android:textSize="14dp"
+            android:gravity="top"
+            android:padding="5dp"/>
+
+
 
         <Button
             android:id="@+id/btnCreate"
