Added Application View Flow, Updated Camera Code and Added Settings View

--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -97,7 +97,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/rounded_rectangle"
-            android:text="" />
+            android:text="test" />
 
         <TextView
             android:id="@+id/tvActivtyDescriptionHeading"
@@ -116,7 +116,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/rounded_rectangle"
-            android:text="" />
+            android:text="test" />
 
         <TextView
             android:id="@+id/tvCategoryHeading"
