--- a/app/src/main/res/layout/activity_view_details_fragment.xml
+++ b/app/src/main/res/layout/activity_view_details_fragment.xml
@@ -173,7 +173,7 @@
                 />
 
             <ImageView
-                android:id="@+id/imgEditCategory"
+                android:id="@+id/imgEditActivity"
                 android:layout_marginTop="12dp"
                 android:layout_width="180dp"
                 android:layout_height="50dp"
