--- a/app/src/main/res/layout/activity_category_name.xml
+++ b/app/src/main/res/layout/activity_category_name.xml
@@ -134,10 +134,12 @@
         android:id="@+id/llCategoryButton"
         android:orientation="horizontal"
         android:layout_below="@id/svBars"
-        android:layout_marginHorizontal="20dp">
+        android:layout_marginHorizontal="20dp"
+        android:clickable="true"
+        android:onClick="onClick">
 
         <ImageView
-            android:id="@+id/imgAddLog"
+            android:id="@+id/imgAddActivity"
             android:layout_marginTop="12dp"
             android:layout_width="180dp"
             android:layout_height="50dp"
@@ -146,7 +148,8 @@
             app:srcCompat="@drawable/cyanturtle"
             android:layout_weight="1"
             android:layout_marginRight="5dp"
-
+            android:clickable="true"
+            android:onClick="onClick"
             />
 
         <ImageView
