--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -20,7 +20,7 @@
         android:id="@+id/imgBlackTurtle"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@drawable/cogturtle"
+        app:srcCompat="@drawable/blackturtle"
         android:layout_marginLeft="320dp"
         android:layout_marginTop="10dp"
         android:rotation="-45"
