--- a/app/src/main/res/layout/activity_create_goal.xml
+++ b/app/src/main/res/layout/activity_create_goal.xml
@@ -58,7 +58,7 @@
         android:id="@+id/imgBlackTurtle"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        app:srcCompat="@drawable/cogturtle"
+        app:srcCompat="@drawable/blackturtle"
         android:layout_marginLeft="320dp"
         android:layout_marginTop="10dp"
         android:rotation="-45"
