--- a/app/src/main/res/layout/activity_settings_view.xml
+++ b/app/src/main/res/layout/activity_settings_view.xml
@@ -57,7 +57,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvSettingsHeader"
-        android:layout_marginHorizontal="20dp"
+        android:layout_marginHorizontal="18dp"
         android:layout_marginTop="34dp"
         android:orientation="vertical">
 
@@ -126,6 +126,38 @@
             app:srcCompat="@drawable/navigation_arrow"
             tools:ignore="SpeakableTextPresentCheck" />
 
+        <TextView
+            android:id="@+id/tvResetPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/rounded_rectangle"
+            android:backgroundTint="@color/Input_Grey"
+            android:clickable="true"
+            android:gravity="center_vertical"
+            android:onClick="onClick"
+            android:paddingVertical="18dp"
+            android:paddingLeft="82dp"
+            android:text="Reset Password (Coming Soon)"
+            android:textSize="20dp" />
+
+        <ImageView
+            android:id="@+id/imgResetPasswordIndicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="-57dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/rounded_rectangle"
+            android:backgroundTint="@color/purple_200"
+            android:clickable="true"
+            android:onClick="onClick"
+            android:paddingVertical="13dp"
+            android:paddingLeft="25dp"
+            android:paddingRight="15dp"
+            app:srcCompat="@drawable/navigation_arrow"
+            tools:ignore="SpeakableTextPresentCheck" />
+
 
 
     </LinearLayout>
@@ -145,7 +177,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/vwSectionDivider"
-        android:layout_marginHorizontal="20dp"
+        android:layout_marginHorizontal="18dp"
         android:layout_marginTop="20dp"
         android:orientation="vertical">
 
@@ -173,7 +205,7 @@
 
 
             <TextView
-                android:id="@+id/tvSignOutText"
+                android:id="@+id/tvViewLogsText"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
@@ -184,7 +216,7 @@
                 android:onClick="onClick"
                 android:paddingVertical="18dp"
                 android:paddingLeft="80dp"
-                android:text="Sign Out"
+                android:text="View Logs"
                 android:textSize="20dp" />
 
             <ImageView
@@ -205,7 +237,7 @@
 
 
             <ImageView
-                android:id="@+id/imgSignOutIndicator"
+                android:id="@+id/imgViewLogsIndicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="126dp"
@@ -224,7 +256,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tvViewLogsText"
+            android:id="@+id/tvSignOutText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
@@ -235,17 +267,17 @@
             android:onClick="onClick"
             android:paddingVertical="18dp"
             android:paddingLeft="82dp"
-            android:text="View Global Logs"
+            android:text="Sign Out"
             android:textSize="20dp" />
 
         <ImageView
-            android:id="@+id/imgViewLogsIndicator"
+            android:id="@+id/imgSignOutIndicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="-57dp"
             android:background="@drawable/rounded_rectangle"
-            android:backgroundTint="@color/purple_200"
+            android:backgroundTint="@color/stop_red"
             android:clickable="true"
             android:onClick="onClick"
             android:paddingVertical="13dp"
